add nav links to data and update layout

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -32,6 +32,7 @@
     <div class="wrapper">
 
       <section>
+        
         <div id="title">
           <h1><a href="/aws-amplify" title="Back to Home">{{ site.title | default: site.github.repository_name }}</a></h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
@@ -39,11 +40,23 @@
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
           <span class="credits right"><a href="https://github.com/aws/aws-amplify/blob/master/CONTRIBUTING.md">Contributing Guidelines</a></span>
         </div>
+        
+        <div id="navigation">
+          {% for item in site.data.samplelist.toc %}
+            <h3>{{ item.title }}</h3>
+              <ul>
+                {% for entry in item.subfolderitems %}
+                  <li><a href="{{ entry.url }}">{{ entry.page }}</a></li>
+                {% endfor %}
+              </ul>
+          {% endfor %}
+        </div>
 
-        {{ content }}
-
+        <div id="content">
+          {{ content }}
+        </div>
+      
       </section>
-
     </div>
   </body>
 </html>
