--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -42,7 +42,7 @@
         </div>
         
         <div id="navigation">
-          {% for item in site.data.samplelist.toc %}
+          {% for item in site.data.navigation.docs %}
             <h3>{{ item.title }}</h3>
               <ul>
                 {% for entry in item.subfolderitems %}
