--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,7 +15,68 @@
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <style>
+    .navbar {
+        overflow: hidden;
+        background-color: #333;
+        font-family: Arial;
+    }
 
+    .navbar a {
+        float: left;
+        font-size: 16px;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+    .dropdown {
+        float: left;
+        overflow: hidden;
+    }
+
+    .dropdown .dropbtn {
+        font-size: 16px;    
+        border: none;
+        outline: none;
+        color: white;
+        padding: 14px 16px;
+        background-color: inherit;
+        font: inherit;
+        margin: 0;
+    }
+
+    .navbar a:hover, .dropdown:hover .dropbtn {
+        background-color: red;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        float: none;
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #ddd;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+    </style>
   </head>
   <body>
       <div id="header">
@@ -36,38 +97,45 @@
         <div id="title">
           <h1><a href="/aws-amplify" title="Back to Home">{{ site.title | default: site.github.repository_name }}</a></h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
-          <hr>
+          
+          <div class="navbar">
+            <a href="/aws-amplify/media/quick_start.html">Quick Start</a>
+            <a href="/aws-amplify/api/index.html">API Reference</a>
+            <a href="/aws-amplify/media/developer_guide.html">Developer Guide</a>
+              
+            <div class="dropdown">
+              <button class="dropbtn">Guides 
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="/aws-amplify/media/install_n_config.html">Installation and Configuration</a>
+                <a href="/aws-amplify/media/authentication_guide.html">Authentication</a>
+                <a href="/aws-amplify/media/analytics_guide.html">Analytics</a>
+                <a href="/aws-amplify/media/api_guide.html">API</a>
+                <a href="/aws-amplify/media/storage_guide.html">Storage</a>
+                <a href="/aws-amplify/media/cache_guide.html">Cache</a>
+              </div>
+            </div>
+
+            <div class="dropdown">
+              <button class="dropbtn">Utilities 
+                <i class="fa fa-caret-down"></i>
+              </button>
+                <div class="dropdown-content">
+                  <a href="/aws-amplify/media/i18n_guide.html">I18n</a>
+                  <a href="/aws-amplify/media/logger_guide.html">Logger</a>
+                  <a href="/aws-amplify/media/hub_guide.html">Hub</a>
+                </div>
+            </div>
+        </div>
+
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
           <span class="credits right"><a href="https://github.com/aws/aws-amplify/blob/master/CONTRIBUTING.md">Contributing Guidelines</a></span>
         </div>
-        
-        <div id="navigation">
-          <ul>
-            <li><a href="/aws-amplify/media/quick_start.html">Quick Start</a></li>
-            <li><a href="/aws-amplify/api/index.html">API Reference</a></li>
-            <li><a href="/aws-amplify/media/developer_guide.html">Developer Guide</a>
-              <ul>
-                <li><a href="/aws-amplify/media/install_n_config.html">Installation and Configuration</a></li>
-                <li><a href="/aws-amplify/media/authentication_guide.html">Authentication</a></li>
-                <li><a href="/aws-amplify/media/analytics_guide.html">Analytics</a></li>
-                <li><a href="/aws-amplify/media/api_guide.html">API</a></li>
-                <li><a href="/aws-amplify/media/storage_guide.html">Storage</a></li>
-                <li><a href="/aws-amplify/media/cache_guide.html">Cache</a></li>
-                <li>Utilities
-                  <ul>
-                    <li><a href="/aws-amplify/media/i18n_guide.html">I18n</a></li>
-                    <li><a href="/aws-amplify/media/logger_guide.html">Logger</a></li>
-                    <li><a href="/aws-amplify/media/hub_guide.html">Hub</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
+
         <div id="content">
           {{ content }}
         </div>
-      
       </section>
     </div>
   </body>
