--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -76,6 +76,16 @@
     .dropdown:hover .dropdown-content {
         display: block;
     }
+    .left {
+      float:left; 
+     }
+    .right {
+      float:right;  
+    }
+    #footer {
+      height: 2em;
+      margin-top:1em;
+    }
     </style>
   </head>
   <body>
@@ -136,7 +146,7 @@
         
         <div id="footer">
            <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
-            <span class="credits right"><a href="https://github.com/aws/aws-amplify/blob/master/CONTRIBUTING.md">Contributing Guidelines</a></span>
+           <span class="credits right"><a href="https://github.com/aws/aws-amplify/blob/master/CONTRIBUTING.md">Contributing Guidelines</a></span>
         </div>
       </section>
     </div>
