--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -48,7 +48,7 @@
     }
 
     .navbar a:hover, .dropdown:hover .dropbtn {
-        background-color: #ffcc00;
+        background-color: #000000;
     }
 
     .dropdown-content {
