--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -110,7 +110,7 @@
           
           <div class="navbar">
             <a href="/aws-amplify/media/quick_start.html">Quick Start</a>
-            <a href="/aws-amplify/api/index.html">API Reference</a>
+            <a href="/aws-amplify/api/index.html" target="_blank">API Reference</a>
             <a href="/aws-amplify/media/developer_guide.html">Developer Guide</a>
               
             <div class="dropdown">
