--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -111,10 +111,9 @@
           <div class="navbar">
             <a href="/aws-amplify/media/quick_start.html">Quick Start</a>
             <a href="/aws-amplify/api/index.html" target="_blank">API Reference</a>
-            <a href="/aws-amplify/media/developer_guide.html">Developer Guide</a>
               
             <div class="dropdown">
-              <button class="dropbtn">Guides 
+              <button class="dropbtn">Developer Guides 
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
