--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -110,7 +110,7 @@
           
           <div class="navbar">
             <a href="/aws-amplify/media/quick_start.html">Quick Start</a>
-            <a href="/aws-amplify/api/index.html" target="_blank" class="right">API Docs</a>
+            <a href="/aws-amplify/api/index.html" target="_blank" style="float:right;">API Docs</a>
               
             <div class="dropdown">
               <button class="dropbtn">Developer Guides 
