--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,6 +16,9 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <style>
+    #header nav {
+      background: transparent;
+    }
     .navbar {
         overflow: hidden;
         background-color: #333;
