--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -95,7 +95,6 @@
       <div id="header">
         <nav>
           <div class="navbar">
-            <a href="{{ site.github.repository_url }}">View On GitHub</a>
             <a href="/aws-amplify/media/quick_start.html">Quick Start</a>
             <a href="/aws-amplify/api/index.html" target="_blank" style="float:right;">API Docs</a>
               
@@ -123,6 +122,7 @@
                   <a href="/aws-amplify/media/hub_guide.html">Hub</a>
                 </div>
             </div>
+            <a href="{{ site.github.repository_url }}">GitHub</a>
         </div>
         </nav>
       </div><!-- end header -->
