--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -50,8 +50,13 @@
         margin: 0;
     }
 
+    .navbar a {
+      color: #ffcc00;
+      font-weight: bold;
+    }
+
     .navbar a:hover, .dropdown:hover .dropbtn {
-        background-color: #000000;
+        color: #ffffff;
     }
 
     .dropdown-content {
@@ -97,11 +102,8 @@
           <div class="navbar">
             <a href="/aws-amplify/media/quick_start.html">Quick Start</a>
             <a href="/aws-amplify/api/index.html" target="_blank" style="float:right;">API Docs</a>
-              
             <div class="dropdown">
-              <button class="dropbtn">Developer Guides 
-                <i class="fa fa-caret-down"></i>
-              </button>
+              <a class="dropbtn">Developer Guides</a>
               <div class="dropdown-content">
                 <a href="/aws-amplify/media/install_n_config.html">Installation and Configuration</a>
                 <a href="/aws-amplify/media/authentication_guide.html">Authentication</a>
@@ -111,11 +113,8 @@
                 <a href="/aws-amplify/media/cache_guide.html">Cache</a>
               </div>
             </div>
-
             <div class="dropdown">
-              <button class="dropbtn">Utilities 
-                <i class="fa fa-caret-down"></i>
-              </button>
+              <a class="dropbtn">Utilities </a>
                 <div class="dropdown-content">
                   <a href="/aws-amplify/media/i18n_guide.html">I18n</a>
                   <a href="/aws-amplify/media/logger_guide.html">Logger</a>
