update docs menu

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -40,6 +40,7 @@
     }
 
     .dropdown .dropbtn {
+      /*
         font-size: 16px;    
         border: none;
         outline: none;
@@ -48,11 +49,12 @@
         background-color: inherit;
         font: inherit;
         margin: 0;
+      */
     }
 
     .navbar a {
       color: #ffcc00;
-      font-weight: bold;
+      text-transform: uppercase;
     }
 
     .navbar a:hover, .dropdown:hover .dropbtn {
@@ -62,7 +64,7 @@
     .dropdown-content {
         display: none;
         position: absolute;
-        background-color: #f9f9f9;
+        background-color: #333333;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
@@ -70,7 +72,6 @@
 
     .dropdown-content a {
         float: none;
-        color: black;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
@@ -78,7 +79,7 @@
     }
 
     .dropdown-content a:hover {
-        background-color: #ddd;
+        background-color: #000000;
     }
 
     .dropdown:hover .dropdown-content {
