update docs layout

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -53,7 +53,7 @@
     }
 
     .navbar a {
-      color: #ffcc00;
+      color: #cc6c02;
       text-transform: uppercase;
     }
 
@@ -62,6 +62,7 @@
     }
 
     .dropdown-content {
+        top: 4em;
         display: none;
         position: absolute;
         background-color: #333333;
