--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,6 +16,11 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <style>
+
+    a {
+      color: #cc6c02 !important;
+    }
+
     #header nav {
       background: transparent;
     }
