--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,7 +18,13 @@
     <style>
 
     a {
-      color: #cc6c02 !important;
+      color: #e9903a !important;
+    }
+
+    #header {
+      background: #24303e !important;
+      border-bottom: 1px solid #1b2532 !important;
+      box-shadow: 0 1px 1px #273546;
     }
 
     #header nav {
@@ -26,8 +32,6 @@
     }
     .navbar {
         overflow: hidden;
-        background-color: #333;
-        font-family: Arial;
     }
 
     .navbar a {
@@ -58,25 +62,25 @@
     }
 
     .navbar a {
-      color: #cc6c02;
-      text-transform: uppercase;
+      color: #ffffff;
     }
 
     .navbar a:hover, .dropdown:hover .dropbtn {
-        color: #ffffff;
+        color: #e9903a;
     }
 
     .dropdown-content {
         top: 4em;
         display: none;
         position: absolute;
-        background-color: #333333;
+        background-color: #24303e;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
     }
 
     .dropdown-content a {
+        color: #fff;
         float: none;
         padding: 12px 16px;
         text-decoration: none;
@@ -85,7 +89,7 @@
     }
 
     .dropdown-content a:hover {
-        background-color: #000000;
+        color: #e9903a;
     }
 
     .dropdown:hover .dropdown-content {
