--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,7 +23,6 @@
 
     #header {
       background: #24303e !important;
-      border-bottom: 1px solid #1b2532 !important;
       box-shadow: 0 1px 1px #273546;
     }
 
@@ -37,7 +36,7 @@
     .navbar a {
         float: left;
         font-size: 16px;
-        color: white;
+        color: white !important;
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
@@ -59,10 +58,6 @@
         font: inherit;
         margin: 0;
       */
-    }
-
-    .navbar a {
-      color: #ffffff;
     }
 
     .navbar a:hover, .dropdown:hover .dropbtn {
@@ -104,6 +99,31 @@
     #footer {
       height: 2em;
       margin-top:1em;
+    }
+
+    .aws-button {
+      display: inline-block;
+      margin: 17px 0 0 15px;
+      min-width: 171px;
+      width: auto;
+      max-width: 100%;
+      height: 35px;
+      padding: 7px 16px 6px;
+      border: 1px solid;
+      border-color: #be952c #a68226 #9b7924;
+      line-height: 1.4;
+      vertical-align: middle;
+      text-align: center;
+      font-size: 14px;
+      font-weight: 500;
+      text-shadow: hsla(0,0%,100%,.8) 0 1px 0;
+      text-decoration: none!important;
+      background: #eeba37;
+      background-image: linear-gradient(180deg,#fee6b0 0,#eeba37);
+      filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr="#fee6b0",endColorstr="#eeba37");
+      box-shadow: inset 0 1px 0 hsla(0,0%,100%,.6);
+      border-radius: 3px;
+      cursor: pointer;
     }
     </style>
   </head>
