--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,6 +21,10 @@
       color: #e9903a !important;
     }
 
+    a:hover {
+      color: white !important;
+    }
+
     #header {
       background: #24303e !important;
       box-shadow: 0 1px 1px #273546;
@@ -61,7 +65,7 @@
     }
 
     .navbar a:hover, .dropdown:hover .dropbtn {
-        color: #e9903a;
+        color: #e9903a !important;
     }
 
     .dropdown-content {
