--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,15 +18,42 @@
     <style>
 
     /** Theme Overrides **/
+    body {
+      color: #333 !important;
+      background: whitesmoke !important;
+    }
+
     a {
-      color: #e9903a !important;
+      color: #25303e !important;
     }
 
     a:hover {
       color: white !important;
     }
 
+    h1, h2, h3, h4, h5, h6 {
+      color: #333 !important;
+    }
+
+    code {
+      color: #25303e !important;
+    }
+
+    pre {
+      background: #25303e !important;
+      border: 1px solid #25303e !important;
+      box-shadow: 0 1px 6px 0px rgba(0, 0, 0, 0.75) !important;
+    }
+
+    hr {
+      background: #EEE;
+    }
+
+    section #title {
+      margin: 0 0 15px 0 !important;
+    }
     section #title p {
+      color: #333;
       font-size: 16px !important;
     }
 
