--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,11 +24,11 @@
     }
 
     a {
-      color: #25303e !important;
+      color: #007eb9 !important;
     }
 
     a:hover {
-      color: white !important;
+      color: #e9903a !important;
     }
 
     h1, h2, h3, h4, h5, h6 {
@@ -43,6 +43,10 @@
       background: #25303e !important;
       border: 1px solid #25303e !important;
       box-shadow: 0 1px 6px 0px rgba(0, 0, 0, 0.75) !important;
+    }
+
+    pre code {
+      color: #efefef !important;
     }
 
     hr {
