add responsive menu

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -181,6 +181,7 @@
     }
 
     @media print, screen and (max-width: 480px) {
+      nav { display:block !important; } 
       .navbar a:not(:first-child) {display: none;}
       .navbar a.icon {
         float: right !important;
@@ -189,6 +190,7 @@
     }
 
     @media print, screen and (max-width: 480px) {
+      nav { display:block !important; }
       .navbar.responsive {position: relative;}
       .navbar.responsive .icon {
         position: absolute !important;
