add responsive menu

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -181,8 +181,8 @@
     }
 
     @media print, screen and (max-width: 480px) {
-      nav { display:block !important; } 
-      .navbar a:not(:first-child) {display: none;}
+      nav { display: block !important; }
+      .navbar { display: none; }
       .navbar a.icon {
         float: right !important;
         display: block !important;
@@ -190,7 +190,7 @@
     }
 
     @media print, screen and (max-width: 480px) {
-      nav { display:block !important; }
+      nav { display: block !important; }
       .navbar.responsive { position: relative; }
       .navbar.responsive .icon {
         position: absolute !important;
