add responsive menu

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -205,10 +205,15 @@
         display: inline-grid;
         background: #24303e;
         top: 4em;
+        left: 0;
         padding: 1em;
+        overflow: visible;
       }
       .responsive a {
         text-align: left !important;
+      }
+      .dropdown-content {
+        left: 12em;
       }
     }
     </style>
