add responsive menu

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -196,6 +196,7 @@
       nav { display: block !important; }
       .navbar { display: none; }
       #githubLink {
+        margin: 18px 0 0 0;
         display:none;
       }
       #githubLinkResponsive {
